--- a/6.3 CSS Box Model/index.html
+++ b/6.3 CSS Box Model/index.html
@@ -7,6 +7,7 @@
   <style>
     /* Write your CSS code here */
     p {
+      margin: 0px;
       font-size: 15px;
     }
     #box-of-first {
@@ -21,12 +22,8 @@
       background: goldenrod;
       height: 200px;
       width: 200px;
-      border-top: 20px;
-      border-bottom: 20px;
-      border-right: 10px;
-      border-left: 10px;
-      border-style: solid;
-      border-color: black;
+      border: solid black;
+      border-width: 20px 10px;
     }
     #the-boxen {
       margin: 0px 0px 0px 40px;
