--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -7,40 +7,41 @@
   <style>
     /* Write your CSS Code here */
     .flag {
-      position: absolute;
       background-color: #ce1126;
       width: 900px;
       height: 600px;
-    }
-    
-    div > p {
-      z-index: 1;
-      position: absolute;
-      top: -75px;
-      left: 300px;
-      color: white;
-      font-size: 75px;
+      position: relative;
     }
 
-    div > div {
-      position: relative;
-      top: 50px;
-      background-color: #002868;
+    .flag > div {
+      width: 100%;
       height: 300px;
-      width: 900px;
+      background-color: #002868;
+      position: absolute;
+      top: 150px;
     }
 
-     div div > p {
-      position: relative;
-      top: 10px;
-      left: 325px;
-      color: black;
-      text-align: center;
-      background-color: white;
+    .flag > div > div {
       width: 200px;
       height: 200px;
-      border-radius: 50%;
+      background-color: white;
+      border-radius: 50%;   
+      position: relative;
+      top: 50px;
+      left: 350px;
     }
+
+    p {
+      margin: 0;
+      font-size: 5rem;
+      text-align: center;
+      color: white;
+    }
+
+    div  div  div  p {
+      color: black;
+    }
+
   </style>
 </head>
 
