--- a/11.3 TinDog Project/index.html
+++ b/11.3 TinDog Project/index.html
@@ -185,7 +185,7 @@
   <section id="footer" class="gradient-background">
     <div class="container">
       <footer class="py-3 my-0">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3" class="white-links">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
