adding to web project

--- a/Website Project/index.html
+++ b/Website Project/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <div class="top-container">
-        <div class="flex-container">
-        <h1 class="heading-text">Here is your header</h1>
+        <div class="flex-container background-header">
+          <img src="./dog.png" />
+        <h1 class="heading-text"> Ruff & Bark Dog Grooming</h1>
     </div>
     <div class="secondary-container">
         <h2>about me</h2>
