update on website

--- a/Website Project/index.html
+++ b/Website Project/index.html
@@ -9,8 +9,7 @@
   <body>
     <div class="top-container">
         <div class="flex-container background-header">
-          <img src="./dog.png" />
-        <h1 class="heading-text"> Ruff & Bark Dog Grooming</h1>
+        <h1 class="heading-text">Platinum Blue Performance Horses</h1>
     </div>
     <div class="secondary-container">
         <h2>about me</h2>
