updating website, trying to add js

--- a/Website Project/index.html
+++ b/Website Project/index.html
@@ -23,5 +23,6 @@
     </div>
     <footer class="bottom-footer">
       <p class="p-footer">this is the footer</p></footer>
+      <script src="script.js"></script>
   </body>
 </html>
