--- a/JavaScript Learning/CardProject/index.html
+++ b/JavaScript Learning/CardProject/index.html
@@ -8,9 +8,13 @@
 </head>
 
 <body>
-  <div class="box">
+  <div>
     <h1 id="heading" class="box">Words</h1>
   </div>
+  <div class="box">
+    <img src="images/horse1.jpg" class="center-image" width="390">
+  </div>
+  <footer id="footer" class="box"><p>Have Fun!</p></footer>
+  <script src="card.js"></script>
 </body>
-
 </html>
