update and add image

--- a/JavaScript Learning/CardProject/index.html
+++ b/JavaScript Learning/CardProject/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Flashcard App</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
   <div>
     <h1 id="heading" class="box">Words</h1>
   </div>
   <div class="box">
-    <img src="images/horse1.jpg" class="center-image" width="390">
+    <div class="center-image">
+      <img id="randomImage" class="item" width="300" />
+    </div>
   </div>
-  <footer id="footer" class="box"><p>Have Fun!</p></footer>
+  <footer id="footer" class="box"><h2>Have Fun!</h2></footer>
   <script src="card.js"></script>
 </body>
 </html>
