--- a/JavaScript Learning/CardProject/index.html
+++ b/JavaScript Learning/CardProject/index.html
@@ -11,10 +11,14 @@
   </div>
   <div class="box">
     <div class="center-image">
-      <img id="randomImage" class="item" width="300" />
+      <img id="randomImage" />
     </div>
   </div>
-  <footer id="footer" class="box"><h2>Have Fun!</h2></footer>
-  <script src="card.js"></script>
+  <footer id="footer" class="box"><h2>Have Fun!</h2>
+    <form>
+    <button id="randomizeButton" type="submit">Randomize</button>
+    </form>
+  </footer>
+  <script src="card.js" charset="utf-8"></script>
 </body>
 </html>
