updating images and card code

--- a/JavaScript Learning/CardProject/public/index.html
+++ b/JavaScript Learning/CardProject/public/index.html
@@ -11,14 +11,13 @@
   </div>
   <div class="box">
     <div class="center-image">
-      <img id="randomImage" />
+      <img id="randomImage" class="item" width="300" src="images/horse.jpg" />
+    </div>
     </div>
   </div>
   <footer id="footer" class="box"><h2>Have Fun!</h2>
-    <form>
-    <button id="randomizeButton" type="submit">Randomize</button>
-    </form>
+    <button id="randomizeButton" class="button">Randomize</button>
   </footer>
-  <script src="card.js" charset="utf-8"></script>
+  <script src="card.js"></script>
 </body>
 </html>
