update on words and button css

--- a/JavaScript Learning/CardProject/public/index.html
+++ b/JavaScript Learning/CardProject/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div>
-    <h1 id="heading" class="box">Words</h1>
+    <h1 id="heading" class="box">Horses</h1>
   </div>
   <div class="box">
     <div class="center-image">
@@ -15,8 +15,8 @@
     </div>
     </div>
   </div>
-  <footer id="footer" class="box"><h2>Have Fun!</h2>
-    <button id="randomizeButton" class="button">Randomize</button>
+  <footer id="footer" class="box">
+    <button id="randomizeButton" class="button">Click To Randomize</button>
   </footer>
   <script src="card.js"></script>
 </body>
