add image blurp

--- a/JavaScript Learning/CardProject/public/index.html
+++ b/JavaScript Learning/CardProject/public/index.html
@@ -13,7 +13,7 @@
     <div class="center-image">
       <img id="randomImage" class="item" width="300" src="images/horse.jpg" />
     </div>
-    </div>
+    <p id="imageBlurb" class="blurb"></p> 
   </div>
   <footer id="footer" class="box">
     <button id="randomizeButton" class="button">Click To Randomize</button>
